refactor: Modularize paper_search and fix arXiv namespace parsing
- Split 1191-line paper_search.rs into 8 focused modules (<200 lines each)
- Add regex crate for XML namespace stripping in arXiv parser
- Fix arXiv search by removing namespace prefixes before parsing
- Add FilterSidebar component with panel toggle pattern
- Support filtering by author, venue, year, and citations

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -51,3 +51,4 @@ quick-xml = { version = "0.36", features = ["serialize"] }
 
 # HTML parsing for Google Scholar scraping
 scraper = "0.20"
+regex = "1.12.3"
